# ApprovalTests.cpp.Builds

./: CMakeLists.txt  README.md
.github/workflows/: github_actions_build.yml
dependencies/: CMakeLists.txt
tests/: CMakeLists.txt
tests/catch2_build_tests/: BasicApprovalTest.cpp  CMakeLists.txt  main.cpp
tests/doctest_build_tests/: CMakeLists.txt  DocTestBasicApprovalTest.cpp  main.cpp
tests/googletest_build_tests/: CMakeLists.txt  GoogleTestBasicApprovalTest.cpp  main.cpp
tests/ut_build_tests/: CMakeLists.txt  UTTestBasicApprovalTest.cpp
